2016-04-05  Richard Biener  <rguenther@suse.de>

PR middle-end/70499
	* gimplify-me.c (gimple_regimplify_operands): Do not rewrite
	non-register type temporaries into SSA.

	* g++.dg/torture/pr70499.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@234738 138bc75d-0d04-0410-961f-82ee72b054a4